Fixed no padding for statusbar on ios when nav-pushing from a modal

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,3 +24,9 @@
     width: 70%;
     text-align: center;
 }
+
+.platform-ios .ios-header {
+  height:calc(56px + 20px);
+  min-height:calc(56px + 20px);
+  padding-top:20px;
+}
